--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,24 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MP_FinalProject" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/pale_white</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+        <item name="android:textColor">@color/pale_white</item>
+        <item name="colorAccent">@color/accent_black</item>
+        <item name="colorPrimaryContainer">@color/accent_black</item>
+        <item name="colorControlNormal">@color/pale_white</item>
     </style>
+
+    <style name="tags">
+        <item name="android:textColor">@color/primary_blue</item>
+    </style>
+
+    <style name="background">
+        <item name="android:background">@color/primary_black</item>
+    </style>
+
+    <style name="logo">
+        <item name="tint">@color/pale_white</item>
+    </style>
+
 </resources>
