--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,24 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MP_FinalProject" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/primary_blue</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+        <item name="android:textColor">@color/primary_black</item>
+        <item name="colorAccent">@color/primary_blue</item>
+        <item name="colorPrimaryContainer">@android:color/transparent</item>
+        <item name="colorControlNormal">@color/primary_black</item>
+    </style>
+
+    <style name="tags">
+        <item name="android:textColor">@color/pale_white</item>
+    </style>
+
+    <style name="background">
+        <item name="android:background">@color/pale_white</item>
+    </style>
+
+    <style name="logo">
+        <item name="tint">@color/primary_black</item>
     </style>
 
     <style name="Theme.MP_FinalProject" parent="Base.Theme.MP_FinalProject" />
