--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -5,7 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="12dp"
     tools:context=".CreatePostActivity"
     style="@style/background">
 
@@ -13,6 +12,7 @@
         android:id="@+id/btn_back"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_margin="12dp"
         android:src="@drawable/arrow_back_24px"
         app:tint="?attr/colorPrimary" />
 
@@ -20,6 +20,7 @@
         android:id="@+id/btn_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
         android:text="Post"
         android:textSize="16dp"
         android:layout_alignParentEnd="true"/>
@@ -32,6 +33,7 @@
         android:textSize="18sp"
         android:gravity="top|start"
         android:layout_marginVertical="6dp"
+        android:layout_marginHorizontal="12dp"
         android:textColorHint="@color/darker_gray"
         android:textColorHighlight="@color/primary_blue"
         android:background="@drawable/rounded_corners"
@@ -44,6 +46,8 @@
         android:layout_height="match_parent"
         android:textSize="18sp"
         android:gravity="top|start"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginBottom="12dp"
         android:textColorHint="@color/darker_gray"
         android:textColorHighlight="@color/primary_blue"
         android:background="@drawable/rounded_corners"
