--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:padding="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
+    android:layout_gravity="center"
     tools:context=".LoginActivity"
     style="@style/background">
 
@@ -15,8 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="50dp"
         android:gravity="center"
+        android:layout_marginHorizontal="24dp"
         >
         <ImageView
             android:id="@+id/iv_logo"
@@ -42,6 +43,7 @@
         android:text="Login to your account"
         android:gravity="center"
         android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="24dp"
         android:textSize="18sp" />
 
     <EditText
@@ -51,6 +53,7 @@
         android:layout_marginTop="40dp"
         android:hint="Email"
         android:textSize="18sp"
+        android:layout_marginHorizontal="24dp"
         android:background="@drawable/rounded_corners"
         android:inputType="textEmailAddress" />
 
@@ -59,6 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="24dp"
         android:hint="Password"
         android:textSize="18sp"
         android:background="@drawable/rounded_corners"
@@ -69,6 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="24dp"
         android:textSize="18sp"
         android:background="@drawable/rounded_button_solid"
         android:text="Sign in" />
@@ -85,6 +90,7 @@
         android:id="@+id/btn_googleSignIn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginHorizontal="24dp"
         android:orientation="horizontal"
         android:gravity="center"
         android:background="@drawable/custom_google_button">
