--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:padding="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".RegisterActivity"
     style="@style/background">
 
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="24dp"
         android:gravity="center">
 
         <ImageView
@@ -37,11 +37,12 @@
 
     <TextView
         android:id="@+id/tv_register"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register your new account"
-        android:gravity="center"
+        android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="24dp"
         android:textSize="18sp" />
 
     <EditText
@@ -49,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:layout_marginHorizontal="24dp"
         android:hint="Username"
         android:textSize="18sp"
         android:background="@drawable/rounded_corners"
@@ -59,6 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="24dp"
         android:hint="Email"
         android:textSize="18sp"
         android:background="@drawable/rounded_corners"
@@ -69,6 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="24dp"
         android:hint="Password"
         android:textSize="18sp"
         android:background="@drawable/rounded_corners"
@@ -79,6 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="24dp"
         android:hint="Confirm Password"
         android:textSize="18sp"
         android:background="@drawable/rounded_corners"
@@ -90,6 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginHorizontal="24dp"
         android:textSize="20sp"
         android:background="@drawable/rounded_button_solid"
         android:text="Sign Up" />
