--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -8,15 +8,36 @@
     tools:context=".EditProfile"
     style="@style/background">
 
-    <ImageView
-        android:id="@+id/btn_back"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="12dp"
-        android:src="@drawable/arrow_back_24px"
+    <RelativeLayout
+        android:id="@+id/headerNav"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="?attr/colorPrimary" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="12dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/arrow_back_24px"
+            android:layout_alignParentStart="true"
+            />
+
+        <TextView
+            android:id="@+id/tv_activityTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:layout_toEndOf="@+id/btn_back"
+            android:fontFamily="@font/lato_bold"
+            android:paddingBottom="6dp"
+            android:layout_centerVertical="true"
+            android:text="Edit Profile Information"
+            android:textSize="18sp" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/tv_username"
@@ -26,8 +47,8 @@
         android:textSize="16sp"
         android:fontFamily="@font/lato_bold"
         android:layout_marginHorizontal="12dp"
-        android:paddingBottom="6dp"
-        app:layout_constraintBottom_toTopOf="@+id/et_username"
+        android:paddingBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@id/et_username"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_profilePic" />
 
@@ -40,7 +61,7 @@
         android:textSize="16sp"
         android:hint="John Doe"
         android:layout_marginHorizontal="12dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_username"
@@ -54,8 +75,8 @@
         android:textSize="16sp"
         android:fontFamily="@font/lato_bold"
         android:layout_marginHorizontal="12dp"
-        android:paddingBottom="6dp"
-        app:layout_constraintBottom_toTopOf="@+id/et_email"
+        android:paddingBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@id/et_email"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_username" />
 
@@ -68,7 +89,7 @@
         android:hint="Email Address"
         android:textSize="16sp"
         android:layout_marginHorizontal="12dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_email"
@@ -82,8 +103,8 @@
         android:textSize="16sp"
         android:fontFamily="@font/lato_bold"
         android:layout_marginHorizontal="12dp"
-        android:paddingBottom="6dp"
-        app:layout_constraintBottom_toTopOf="@+id/et_password"
+        android:paddingBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@id/et_password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_email" />
 
@@ -96,23 +117,24 @@
         android:textSize="18sp"
         android:hint="New Password"
         android:layout_marginHorizontal="12dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_password" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_profilePic"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginVertical="48dp"
         android:scaleType="centerCrop"
         android:src="@drawable/default_pfp"
         app:civ_border_color="@color/primary_blue"
         app:civ_border_width="2dp"
+        app:layout_constraintBottom_toTopOf="@id/tv_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/headerNav" />
 
     <Button
         android:id="@+id/btn_save"
@@ -120,7 +142,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:layout_marginBottom="6dp"
-        android:background="@drawable/rounded_button_solid"
+        style="@style/button_blue"
         android:text="Save"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
