--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -96,9 +96,9 @@
         android:layout_marginTop="24dp"
         android:layout_marginBottom="8dp"
         android:layout_marginHorizontal="24dp"
-        android:textSize="20sp"
-        android:background="@drawable/rounded_button_solid"
-        android:text="Sign Up" />
+        android:textSize="18sp"
+        android:text="Sign Up"
+        style="@style/button_blue"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
