--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MP_FinalProject" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <item name="colorPrimary">@color/pale_white</item>
+        <item name="colorPrimary">@color/primary_blue</item>
         <item name="android:fontFamily">@font/lato_regular</item>
         <item name="android:textColor">@color/pale_white</item>
         <item name="colorAccent">@color/accent_black</item>
@@ -16,6 +16,11 @@
 
     <style name="background">
         <item name="android:background">@color/primary_black</item>
+    </style>
+
+    <style name="button">
+        <item name="android:background">@drawable/rounded_button_solid</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
     </style>
 
     <style name="logo">
