--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,8 +9,8 @@
 
     <!--RecyclerView-->
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_posts"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/rv_posts" />
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
