--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -52,8 +52,7 @@
             android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@id/tab_layout"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf=""
-            app:layout_constraintTop_toBottomOf="@+id/iv_profilePic">
+            app:layout_constraintTop_toBottomOf="@id/iv_profilePic">
 
             <ImageView
                 android:id="@+id/icEdit"
