--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -52,6 +52,7 @@
             android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@id/tab_layout"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_nightMode"
             app:layout_constraintTop_toBottomOf="@id/iv_profilePic">
 
             <ImageView
@@ -100,10 +101,12 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="50dp"
+            android:layout_marginStart="20dp"
             android:scaleType="centerCrop"
             android:src="@drawable/default_pfp"
             app:civ_border_color="@color/primary_blue"
             app:civ_border_width="2dp"
+            app:layout_constraintBottom_toTopOf="@id/btn_editProfile"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
