--- a/app/src/main/res/layout/post_view.xml
+++ b/app/src/main/res/layout/post_view.xml
@@ -21,8 +21,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/iv_profilePic"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:contentDescription="Post Author"
                 android:scaleType="centerCrop"
                 android:src="@drawable/default_pfp"
@@ -37,7 +37,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:paddingStart="8dp"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@id/tv_dateTime"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_profilePic"
@@ -49,7 +49,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:paddingStart="8dp"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_profilePic"
@@ -61,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="4dp"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_profilePic"
@@ -86,7 +86,7 @@
                 android:layout_marginEnd="8dp"
                 android:nestedScrollingEnabled="false"
                 android:scrollbars="horizontal"
-                app:layout_constraintEnd_toStartOf="@id/iv_upvote"
+                app:layout_constraintEnd_toStartOf="@id/upvote"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_images" />
 
@@ -96,33 +96,37 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/tag_background"
                 style="@style/tags"
+                android:visibility="gone"
                 android:fontFamily="@font/lato_bold"
-                android:textSize="12sp"
+                android:textSize="16sp"
                 tools:text="# Carlotta"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/rv_tags" />
 
-            <ImageView
-                android:id="@+id/iv_upvote"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginHorizontal="4dp"
-                android:src="@drawable/thumb_up_24px"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/tv_upvote"
-                app:layout_constraintTop_toBottomOf="@id/iv_images" />
-
-            <TextView
-                android:id="@+id/tv_upvote"
+            <LinearLayout
+                android:id="@+id/upvote"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="4dp"
-                android:text="0"
-                android:textSize="16sp"
+                android:gravity="center"
+                android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_images" />
+                app:layout_constraintTop_toBottomOf="@id/iv_images">
 
+                <ImageView
+                    android:id="@+id/iv_upvote"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/thumb_up_24px" />
+
+                <TextView
+                    android:id="@+id/tv_upvote"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textSize="16sp"
+                    android:layout_marginHorizontal="8dp"/>
+            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
