--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -128,7 +128,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
-            android:text="User ID:"
+            android:text="UID:"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@id/iv_profilePic"
             app:layout_constraintTop_toBottomOf="@id/tv_username" />
