--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -2,11 +2,17 @@
 <TextView
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tag_text"
+    android:id="@+id/tag_text1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/tag_background"
-    android:padding="8dp"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
+    android:paddingTop="6dp"
+    android:paddingBottom="6dp"
     android:textSize="12sp"
+    android:textColor="#333333"
     tools:text="# Carlotta"
-    style="@style/tags" />
+    style="@style/tags"
+    android:layout_margin="4dp"
+    />
